--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.3.5", features = ["derive"] }
 indicatif = "0.17.3"
-structopt = "0.3.26"
 surge-ping = "0.8.0"
 tokio = { version = "1.28.0", default-features = false, features = ["rt", "rt-multi-thread", "macros", "time"] }
