--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "multiping"
 version = "0.1.2"
 edition = "2021"
+description = "Send ping to multiple hosts simultaneously for LAN monitoring."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
